--- a/asset/index.html
+++ b/asset/index.html
@@ -1,31 +1,26 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 ie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 ie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 ie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-	<meta charset="utf-8" />
+<!DOCTYPE html><!--[if lt IE 7]> <html class="no-js ie6 ie" lang="en"> <![endif]--><!--[if IE 7]>    <html class="no-js ie7 ie" lang="en"> <![endif]--><!--[if IE 8]>    <html class="no-js ie8 ie" lang="en"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]--><head>
+	<meta charset="utf-8">
 
 	<!-- Use the .htaccess and remove these lines to avoid edge case issues.-->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Javascript Shopping Cart - simpleCart(js) </title>
 	
 	<!--SEO & Social Content-->
-	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-	<meta property="og:title" content="" />
-	<meta property="og:description" content="" />
-	<meta property="og:image" content="" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+	<meta property="og:title" content>
+	<meta property="og:description" content>
+	<meta property="og:image" content>
+	<meta name="description" content>
+	<meta name="author" content>
 
 	<!-- Mobile viewport -->
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<!-- CSS-->
-	<link rel="stylesheet" href="/assets/css/style.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/jquery.snippet.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/uniform.dark.css" />
+	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/jquery.snippet.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/uniform.dark.css">
 	
 
 	<!-- All JavaScript at the bottom, except for Modernizr -->
@@ -39,9 +34,9 @@
 			<header>
 				<nav id="mainNavigation">
 					<ul>
-						<li><a href="http://simplecartjs.org/features">Features</a></li>
-<li><a href="http://simplecartjs.org/documentation">Documentation</a></li>
-<li class="last"><a href="http://simplecartjs.org/tutorials">Tutorials</a></li>
+						<li><a href="/features">Features</a></li>
+<li><a href="/documentation">Documentation</a></li>
+<li class="last"><a href="/tutorials">Tutorials</a></li>
 
 					</ul>
 				</nav>
@@ -72,7 +67,7 @@
 						<span class="item_price">$19.99</span>
 						<a href="javascript:;" class="item_add">Add to Cart</a>
 					</div>
-					<img src="/assets/images/inceptiondvd.png" alt="Sample Product" class="item_image"/>
+					<img src="/assets/images/inceptiondvd.png" alt="Sample Product" class="item_image">
 					<span class="item_name">Inception</span>
 				</div>
 				<div class="simpleCart_shelfItem">
@@ -80,7 +75,7 @@
 						<span class="item_price">$59.99</span>
 						<a href="javascript:;" class="item_add">Add to Cart</a>
 					</div>
-					<img src="/assets/images/nhl12.png" alt="Sample Product" class="item_image"/>
+					<img src="/assets/images/nhl12.png" alt="Sample Product" class="item_image">
 					<span class="item_name">NHL 12</span>
 				</div>
 				<!-- <div class="simpleCart_shelfItem">
@@ -96,7 +91,7 @@
 						<span class="item_price">$12.99</span>
 						<a href="javascript:;" class="item_add">Add to Cart</a>
 					</div>
-					<img src="/assets/images/goodtogreat.png" alt="Sample Product" class="item_image"/>
+					<img src="/assets/images/goodtogreat.png" alt="Sample Product" class="item_image">
 					<span class="item_name">Good To Great</span>
 				</div>
 			</div>
@@ -107,15 +102,15 @@
 		<span class="one-half">
 			<h2>Ecommerce in Minutes.</h2>
 			<div class="largeText"><p>
-	No databases, no programming, no headaches. A simple javascript shopping cart that you can setup in minutes. It&#39;s lightweight, fast, simple to use, and completely customizable. <strong>All you need to know is basic HTML.</strong></p>
+	No databases, no programming, no headaches. A simple javascript shopping cart that you can setup in minutes. It&apos;s lightweight, fast, simple to use, and completely customizable. <strong>All you need to know is basic HTML.</strong></p>
 </div>
 			<p>
 				<a href="#" class="large btn"><span class="icn icnList">Browse Features</span></a>
 			</p>
 		</span>
-		<span class="one-half alignRight" >
+		<span class="one-half alignRight">
 			
-				<a href="http://simplecartjs.org/uploads/bioSteve.jpg" class="right" id="tourLink">Watch a Quick Video on how to add simpleCart<sup>(js)</sup> to your site</a>
+				<a href="/uploads/bioSteve.jpg" class="right" id="tourLink">Watch a Quick Video on how to add simpleCart<sup>(js)</sup> to your site</a>
 			
 		</span>
 	</section>
@@ -124,7 +119,7 @@
 			<h1 class="left"><a href="/">simpleCart(js)</a></h1>
 			<div class="right">
 				<a href="http://github.com/wojodesign/simplecart-js" target="_blank" class="icnGithub">Github</a>
-				&nbsp;&nbsp;
+				&#xA0;&#xA0;
 				<a href="http://twitter.com/simplecartjs" target="_blank" class="icnTwitter">Twitter</a>
 			</div>
 		</footer>
@@ -184,5 +179,5 @@ simpleCart(js) Demo Code.
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
 <![endif]-->
 
-</body>
-</html>
+
+</body></html>
