--- a/documentation/simplecart-dollar-sign-create/index.html
+++ b/documentation/simplecart-dollar-sign-create/index.html
@@ -1,31 +1,26 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 ie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 ie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 ie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-	<meta charset="utf-8" />
+<!DOCTYPE html><!--[if lt IE 7]> <html class="no-js ie6 ie" lang="en"> <![endif]--><!--[if IE 7]>    <html class="no-js ie7 ie" lang="en"> <![endif]--><!--[if IE 8]>    <html class="no-js ie8 ie" lang="en"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]--><head>
+	<meta charset="utf-8">
 
 	<!-- Use the .htaccess and remove these lines to avoid edge case issues.-->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Javascript Shopping Cart - simpleCart(js) </title>
 	
 	<!--SEO & Social Content-->
-	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-	<meta property="og:title" content="" />
-	<meta property="og:description" content="" />
-	<meta property="og:image" content="" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+	<meta property="og:title" content>
+	<meta property="og:description" content>
+	<meta property="og:image" content>
+	<meta name="description" content>
+	<meta name="author" content>
 
 	<!-- Mobile viewport -->
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<!-- CSS-->
-	<link rel="stylesheet" href="/assets/css/style.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/jquery.snippet.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/uniform.dark.css" />
+	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/jquery.snippet.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/uniform.dark.css">
 	
 
 	<!-- All JavaScript at the bottom, except for Modernizr -->
@@ -325,7 +320,7 @@
 					
 				</ul>
 		
-				<h4>UI & DOM Manipulation</h4>
+				<h4>UI &amp; DOM Manipulation</h4>
 				<ul>
 					
 							<li><a href="/documentation/simplecart-update">.update</a></li>
@@ -369,39 +364,36 @@
 		
 	</nav>
 	<div id="main">
-					<p class="breadcrumbs"><a href="/documentation/">Documentation</a> &raquo; <span class="last">.$create</span></p>
+					<p class="breadcrumbs"><a href="/documentation/">Documentation</a> &#xBB; <span class="last">.$create</span></p>
 			
 					<h2 class="pageTitle">simpleCart.$create( tag )</h2>
 					<div class="signatures">
-<p><strong>arguments:</strong><br/>
-<ul><li>tag: string of tagName of DOM element to create (ie &#8216;span&#8217;,&#8216;div&#8217;, etc)</li></ul>
-</p>
+<p><strong>arguments:</strong><br>
+</p><ul><li>tag: string of tagName of DOM element to create (ie &#x2018;span&#x2019;,&#x2018;div&#x2019;, etc)</li></ul>
+<p></p>
 
-<p><strong>returns:</strong><br/>
-<ul><li>simpleCart.ELEMENT object of new DOM element</li></ul>
-</p>
+<p><strong>returns:</strong><br>
+</p><ul><li>simpleCart.ELEMENT object of new DOM element</li></ul>
+<p></p>
 
-<p>&nbsp;</p>
+<p>&#xA0;</p>
 </div>
 
-<pre class="html">
-<div id="container">
+<pre class="html"><div id="container">
 </div>
 </pre>
 
-<pre class="js">
-var myDiv = simpleCart.$create('div');
-myDiv.text("hello");
-simpleCart.$("#container").append(myDiv);
+<pre class="js">var myDiv = simpleCart.$create(&apos;div&apos;);
+myDiv.text(&quot;hello&quot;);
+simpleCart.$(&quot;#container&quot;).append(myDiv);
 </pre>
 
-<pre class="html">
-<div id="container">
+<pre class="html"><div id="container">
     <div>hello</div>
 <div id="container">
-</pre>
 
-<p>&nbsp;</p>
+
+<p>&#xA0;</p>
 			
 			
 			<div id="commentArea">
@@ -419,11 +411,11 @@ simpleCart.$("#container").append(myDiv);
 			<h1 class="left"><a href="/">simpleCart(js)</a></h1>
 			<div class="right">
 				<a href="http://github.com/wojodesign/simplecart-js" target="_blank" class="icnGithub">Github</a>
-				&nbsp;&nbsp;
+				&#xA0;&#xA0;
 				<a href="http://twitter.com/simplecartjs" target="_blank" class="icnTwitter">Twitter</a>
 			</div>
 		</footer>
-	</div><!-- End #content -->
+	</pre></div><!-- End #content -->
 </div><!-- End #container -->
 
 <!-- JavaScript -->
@@ -479,5 +471,5 @@ simpleCart(js) Demo Code.
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
 <![endif]-->
 
-</body>
-</html>
+
+</div></div></body></html>
