--- a/features/index.html
+++ b/features/index.html
@@ -1,31 +1,26 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 ie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 ie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 ie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-	<meta charset="utf-8" />
+<!DOCTYPE html><!--[if lt IE 7]> <html class="no-js ie6 ie" lang="en"> <![endif]--><!--[if IE 7]>    <html class="no-js ie7 ie" lang="en"> <![endif]--><!--[if IE 8]>    <html class="no-js ie8 ie" lang="en"> <![endif]--><!--[if gt IE 8]><!--><html class="no-js" lang="en"><!--<![endif]--><head>
+	<meta charset="utf-8">
 
 	<!-- Use the .htaccess and remove these lines to avoid edge case issues.-->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Javascript Shopping Cart - simpleCart(js) </title>
 	
 	<!--SEO & Social Content-->
-	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
-	<meta property="og:title" content="" />
-	<meta property="og:description" content="" />
-	<meta property="og:image" content="" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
+	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+	<meta property="og:title" content>
+	<meta property="og:description" content>
+	<meta property="og:image" content>
+	<meta name="description" content>
+	<meta name="author" content>
 
 	<!-- Mobile viewport -->
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<!-- CSS-->
-	<link rel="stylesheet" href="/assets/css/style.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/jquery.snippet.css" />
-	<link rel="stylesheet" type="text/css" href="/assets/css/uniform.dark.css" />
+	<link rel="stylesheet" href="/assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/jquery.snippet.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/uniform.dark.css">
 	
 
 	<!-- All JavaScript at the bottom, except for Modernizr -->
@@ -86,7 +81,7 @@
 							<li>Paypal Express</li>
 							<li>Amazon Payments</li>
 							<li>Google Checkout</li>
-							<li>Custom <br/>
+							<li>Custom <br>
 								<em>(requires programming knowledge)</em>
 							</li>
 						</ul>
@@ -126,7 +121,7 @@
 							<li>Singapore Dollar</li>
 							<li>Swedish Krona</li>
 							<li>Swiss Franc</li>
-							<li>Thai Baht"</li>
+							<li>Thai Baht&quot;</li>
 							<li>Bitcoin</li>
 							<li>Custom e.g., Patty Bucks</li>
 						</ul>
@@ -137,20 +132,20 @@
 				<h3>What simpleCart<sup>(js)</sup> Does Not Do.</h3>
 				<ul class="allFeatures">
 					<li>
-						<em>Does Not:</em> Manage Your Products.<br/>
+						<em>Does Not:</em> Manage Your Products.<br>
 							<p>simpleCart<sup>(js)</sup> works by tying
 							into your existing HTML. So managing your
 							products is best done using a CMS or
 							by hand-coding your HTML (only recommended for small stores).</p>
 					</li>
 					<li>
-						<em>Does Not:</em> Handle Order Management<br/>
+						<em>Does Not:</em> Handle Order Management<br>
 							<p>This is best handled by the chosen payment
 							method that you use with simpleCart<sup>(js)</sup>
 							(there are many to choose from.)</p>
 					</li>
 					<li>
-						<em>Does Not:</em> Keep Track of Inventory<br/>
+						<em>Does Not:</em> Keep Track of Inventory<br>
 							<p>That being said, it is possible to do so
 							with some backend programming knowledge. 
 							simpleCart<sup>(js)</sup> is best suited
@@ -158,7 +153,7 @@
 							unlimited inventory.</p>
 					</li>
 					<li>
-						<em>Is Not:</em> Foolproof<br/>
+						<em>Is Not:</em> Foolproof<br>
 							<p>Clever hackers can change prices of simpleCart<sup>(js)</sup>
 							items before checkout. This is a known security flaw that
 							exists with <strong>ALL</strong> javascript shopping carts.
@@ -175,29 +170,26 @@
 		<div class="left" style="width:450px">
 <div id="codeSnippets">
 <!--Add an Item for Sale-->
-<pre class="feature-html">
-<div class="simpleCart_shelfItem">
+<pre class="feature-html"><div class="simpleCart_shelfItem">
    <h2 class="item_name">Item Name Goes Here</h2>
-   <img src="item-image.jpg" alt="Item Alt"  />
+   <img src="item-image.jpg" alt="Item Alt">
    <span class="item_price">$19.99</span>
    <a href="javascript:;" class="item_add">Add to Cart</a>
 </div>
 </pre>
 
 <!-- Custom Product Options -->
-<pre class="feature-html" style="display:none">
-<!--Paste inside <div class="simpleCart_shelfItem"> -->
+<pre class="feature-html" style="display:none"><!--Paste inside <div class="simpleCart_shelfItem"> -->
 <select class="item_size">
 	<option value="tall">Tall</option>
 	<option value="grande">Grande</option>
 	<option value="venti">Venti</option>
 </select>
-<input type="text" class="item_custom-attribute" />
+<input type="text" class="item_custom-attribute">
 </pre>
 
 <!-- Display Cart Data -->
-<pre class="feature-html" style="display:none">
-<span class="simpleCart_quantity"></span>
+<pre class="feature-html" style="display:none"><span class="simpleCart_quantity"></span>
 <!--number of items in the cart-->
 <span class="simpleCart_total"></span>
 <!-- total cost of cart before tax & shipping-->
@@ -210,8 +202,7 @@
 </pre>
 
 <!-- Display Full Cart -->
-<pre class="feature-html" style="display:none">
-<div class="simpleCart_items"></div>
+<pre class="feature-html" style="display:none"><div class="simpleCart_items"></div>
 <!-- Yep it's that simple -->
 </pre>
 </div>
@@ -228,8 +219,8 @@
 			<h3>No Databases, just simple HTML &amp; Javascript</h3>
 			<p>
 				Our motto has always been that all you need to know is basic HTML 
-				to use simpleCart(js). If you’re able to copy and paste a few lines 
-				of Javascript and put class names on your HTML tags, you’ll have no 
+				to use simpleCart(js). If you&#x2019;re able to copy and paste a few lines 
+				of Javascript and put class names on your HTML tags, you&#x2019;ll have no 
 				trouble adding a fully functioning and completely customized ecommerce 
 				store to your site in a matter of minutes.
 			</p>
@@ -246,10 +237,10 @@
 			<h3>Extremely Flexible Design Options</h3>
 			<p>
 				Its simple, you just add class names to your existing HTML to make a product 
-				or display cart information. The display of what is in a user’s cart can be 
+				or display cart information. The display of what is in a user&#x2019;s cart can be 
 				outputted as a table or divs with complete control over the language, order, 
 				content, and styling of those items. Just bring your own CSS and simpleCart<sup>(js)</sup> 
-				is a perfect fit for any content management system even a basic static HTML site.<br/> 
+				is a perfect fit for any content management system even a basic static HTML site.<br> 
 				<a href="/documentation/">View our Documentation</a> on how to customize cart output.
 			</p>
 		</div>
@@ -260,13 +251,13 @@
 		<div id="features-gateways-visual" class="left">
 			<ul id="gatewayDemoList">
 				<li id="featurePaypal">
-					<label for="feature-paypal" class="active"><strong>Paypal</strong><input type="radio" name="gateway" id="feature-paypal" checked="checked"/></label>
+					<label for="feature-paypal" class="active"><strong>Paypal</strong><input type="radio" name="gateway" id="feature-paypal" checked="checked"></label>
 				</li>
 				<li id="featureGoogle">
-					<label for="feature-google"><strong>Google Checkout</strong><input type="radio" name="gateway" id="feature-google" /></label>
+					<label for="feature-google"><strong>Google Checkout</strong><input type="radio" name="gateway" id="feature-google"></label>
 				</li>
 				<li id="featureAmazon">
-					<label for="feature-amazon"><strong>Amazon Payments</strong><input type="radio" name="gateway" id="feature-amazon" /></label>
+					<label for="feature-amazon"><strong>Amazon Payments</strong><input type="radio" name="gateway" id="feature-amazon"></label>
 				</li>
 				<li id="featureEmail">
 					<label><strong>Email</strong></label>
@@ -278,8 +269,8 @@
 			<h3>Multiple Payment Gateways</h3>
 			<p>
 				The simpleCart<sup>(js)</sup> free core comes with the ability to checkout with paypal express, 
-				google checkout, and amazon payments. We’re always working on adding new payment 
-				gateways and checkout options. <br/>
+				google checkout, and amazon payments. We&#x2019;re always working on adding new payment 
+				gateways and checkout options. <br>
 				<strong>Come back soon for email checkout, authorize.net and more.</strong>
 			</p>
 		</div>
@@ -307,7 +298,7 @@
 			<p>
 				Every piece of text viewable on your website is written by you, which means you choose 
 				what language your cart is in. There is no need to download language packs or do 
-				translations. it’s completely agnostic to whatever language your customers speak.
+				translations. it&#x2019;s completely agnostic to whatever language your customers speak.
 			</p>
 		</div>
 		<div class="featureText right">
@@ -322,7 +313,7 @@
 			<h1 class="left"><a href="/">simpleCart(js)</a></h1>
 			<div class="right">
 				<a href="http://github.com/wojodesign/simplecart-js" target="_blank" class="icnGithub">Github</a>
-				&nbsp;&nbsp;
+				&#xA0;&#xA0;
 				<a href="http://twitter.com/simplecartjs" target="_blank" class="icnTwitter">Twitter</a>
 			</div>
 		</footer>
@@ -382,5 +373,5 @@ simpleCart(js) Demo Code.
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
 <![endif]-->
 
-</body>
-</html>
+
+</body></html>
