replace simpleCart.js script inclusion

--- a/documentation/afteradd-event/index.html
+++ b/documentation/afteradd-event/index.html
@@ -377,8 +377,7 @@
 
 <p>The &#x2018;afterAdd&#x2019; event is triggered immediately after an item has been added to the cart.&#xA0; You can modify the item using the reference.</p>
 
-<pre class="js">
-// basic callback example
+<pre class="js">// basic callback example
 simpleCart.bind( &quot;afterAdd&quot; , function( item ){
   console.log( item.get(&quot;name&quot;) + &quot; was added to the cart!&quot; );
 });
@@ -444,7 +443,7 @@ simpleCart.bind( &quot;afterAdd&quot; , function( item , isNew ){
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
