--- a/documentation/beforecheckout-event/index.html
+++ b/documentation/beforecheckout-event/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">&apos;beforeCheckout&apos; Event</h2>
 					<p>The &#x2018;beforeCheckout&#x2019; event is triggered just before simpleCart checks out.&#xA0; It passes a single parameter of the data that will be sent out in the checkout, which can be modified or added to. </p>
 
-<pre class="js">
-// simple callback example
+<pre class="js">// simple callback example
 simpleCart.bind( &apos;beforeCheckout&apos; , function( data ){
   data.invoiceNumber = &quot;ABC-123456789&quot;;
 });
@@ -407,7 +406,7 @@ simpleCart.bind( &apos;beforeCheckout&apos; , function( data ){
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
