--- a/documentation/beforeremove-event/index.html
+++ b/documentation/beforeremove-event/index.html
@@ -371,8 +371,7 @@
 
 <p> If a callback for the event returns false, the item will not be removed. </p>
 
-<pre class="js">
-// simple callback example
+<pre class="js">// simple callback example
 simpleCart.bind( &apos;beforeRemove&apos; , function( item ){
   console.log( item.get(&apos;name&apos;) + &quot; was removed from the cart&quot; ); 
 });
@@ -426,7 +425,7 @@ It simply asks to confirm the removal of a product, but it doesn&#x2019;t really
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
