--- a/documentation/ready-event/index.html
+++ b/documentation/ready-event/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">&apos;ready&apos; Event</h2>
 					<p>The &#x2018;ready&#x2019; event is triggered once when simpleCart has been initialized.</p>
 
-<pre class="js">
-// log the total when simpleCart has initialized
+<pre class="js">// log the total when simpleCart has initialized
 simpleCart.bind( &apos;ready&apos; , function(){
   console.log( &quot;simpleCart total: &quot; + simpleCart.toCurrency( simpleCart.total() ) ); 
 });
@@ -414,7 +413,7 @@ simpleCart.bind( &apos;ready&apos; , function(){
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
