--- a/documentation/simplecart-find/index.html
+++ b/documentation/simplecart-find/index.html
@@ -382,8 +382,7 @@
 
 <p>You can search for items in the cart by matching one or more fields in the object, or by using inequality searches:</p>
 
-<pre class="js">
-var bob = simpleCart.add({name: &quot;bob&quot; , price: 2 , color:&apos;blue&apos; , size: 6 }),
+<pre class="js">var bob = simpleCart.add({name: &quot;bob&quot; , price: 2 , color:&apos;blue&apos; , size: 6 }),
   joe = simpleCart.add({name: &quot;joe&quot; , price: 3 , color:&apos;orange&apos; , size: 3 }),
   jeff = simpleCart.add({name: &quot;jeff&quot; , price: 4 , color:&apos;blue&apos; , size: 4 }),
   bill = simpleCart.add({name: &quot;bill&quot; , price: 5 , color:&apos;red&apos; , size: 5 });
@@ -425,7 +424,7 @@ console.log( simpleCart.find({ color: &apos;blue&apos;, size: &apos;&lt;4&apos; 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
