--- a/documentation/simplecart-item-decrement/index.html
+++ b/documentation/simplecart-item-decrement/index.html
@@ -376,8 +376,7 @@
 
 <p>If the quantity of the item is 0 or less after it is decremented, the item is removed from the cart</p>
 
-<pre class="js">
-var myItem = simpleCart.add({ name: &quot;Cool Thing&quot; , price: 4, quantity: 5 });
+<pre class="js">var myItem = simpleCart.add({ name: &quot;Cool Thing&quot; , price: 4, quantity: 5 });
 
 myItem.decrement();
 
@@ -418,7 +417,7 @@ myItem.quantity(); // 2
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
