--- a/documentation/simplecart-item-equals/index.html
+++ b/documentation/simplecart-item-equals/index.html
@@ -382,8 +382,7 @@
 <p>&#xA0;</p>
 </div>
 
-<pre class="js">
-var shirt = simpleCart.add({ name: &quot;Shirt&quot; , price: 4 }),
+<pre class="js">var shirt = simpleCart.add({ name: &quot;Shirt&quot; , price: 4 }),
     mug = simpleCart.add({ name: &quot;Mug&quot; , price 2 }),
     shirt2 = simpleCart.add({ name: &quot;Shirt&quot; , price: 4 });
 
@@ -423,7 +422,7 @@ shirt.equals( shirt2 ); // true
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
