--- a/documentation/simplecart-item-price/index.html
+++ b/documentation/simplecart-item-price/index.html
@@ -381,8 +381,7 @@
 <p>&#xA0;</p>
 </div>
 
-<pre class="js">
-var myItem = simpleCart.add({ name: &quot;T-shirt&quot; , price: 5 });
+<pre class="js">var myItem = simpleCart.add({ name: &quot;T-shirt&quot; , price: 5 });
 
 myItem.price(); // 5
 
@@ -420,7 +419,7 @@ myItem.price(); // 10
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
