--- a/documentation/simplecart-save/index.html
+++ b/documentation/simplecart-save/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">simpleCart.save()</h2>
 					<p>Save the shopping cart data</p>
 
-<pre class="js">
-// saves the items to local storage
+<pre class="js">// saves the items to local storage
 simpleCart.save();
 
 </pre>
@@ -405,7 +404,7 @@ simpleCart.save();
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
