--- a/documentation/simplecart-tocurrency/index.html
+++ b/documentation/simplecart-tocurrency/index.html
@@ -382,8 +382,7 @@
 
 <p>See the <a href="/documentation/currency">Currency Documentation</a> for more info about currency options.</p>
 
-<pre class="js">
-simpleCart({
+<pre class="js">simpleCart({
   currency: &quot;USD&quot;
 });
 
@@ -421,7 +420,7 @@ simpleCart.toCurrency( 9.99, { symbol: &apos;#&apos; } ); // #9.99
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
