--- a/documentation/simplecart-trigger/index.html
+++ b/documentation/simplecart-trigger/index.html
@@ -376,8 +376,7 @@
 
 <p>Trigger an event, and thus all callbacks binded to that event.</p>
 
-<pre class="js">
-simpleCart.bind( &apos;awesomeEvent&apos; , function(){
+<pre class="js">simpleCart.bind( &apos;awesomeEvent&apos; , function(){
   console.log( &quot;an awesome event just happened!&quot; );
 });
 
@@ -413,7 +412,7 @@ simpleCart.trigger( &quot;awesomeEvent&quot; );
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
