--- a/documentation/beforeadd-event/index.html
+++ b/documentation/beforeadd-event/index.html
@@ -371,8 +371,7 @@
 
 <p> If a callback for the event returns false, the item will not be added. </p>
 
-<pre class="js">
-// simple callback example
+<pre class="js">// simple callback example
 simpleCart.bind( &apos;beforeAdd&apos; , function( item ){
   console.log( item.get(&apos;name&apos;) ); 
 });
@@ -428,7 +427,7 @@ simpleCart.bind( &apos;beforeAdd&apos; , function( item ){
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
