--- a/documentation/simplecart-element-attr/index.html
+++ b/documentation/simplecart-element-attr/index.html
@@ -431,7 +431,7 @@ simpleCart.$(&quot;#my-img&quot;).attr( &quot;title&quot; , &quot;Picture&quot; 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
