--- a/documentation/simplecart-element/index.html
+++ b/documentation/simplecart-element/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">.ELEMENT</h2>
 					<p>This is a class that represents a collection of DOM elements.&#xA0; It is a wrapper for the element objects created in the javascript library of choice.&#xA0; You can create a new element by using simpleCart.$() or simpleCart.$create(): </p>
 
-<pre class="js">
-var lis = simpleCart.$( &apos;li&apos; ); // collection of all li elements
+<pre class="js">var lis = simpleCart.$( &apos;li&apos; ); // collection of all li elements
 
 var new_li = simpleCart.$create( &apos;li&apos; ); // creates new element of the given tag
 
@@ -404,7 +403,7 @@ var new_li = simpleCart.$create( &apos;li&apos; ); // creates new element of the
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
