--- a/documentation/simplecart-grandtotal/index.html
+++ b/documentation/simplecart-grandtotal/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">simpleCart.grandTotal();</h2>
 					<p>Returns the final total of the cart, including tax and shipping costs</p>
 
-<pre class="js">
-simpleCart.add({ 
+<pre class="js">simpleCart.add({ 
   name: &quot;Cool Thing&quot; ,
   price: 10.00
 });
@@ -429,7 +428,7 @@ simpleCart.grandTotal(); // $10.60
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
