--- a/documentation/simplecart-has/index.html
+++ b/documentation/simplecart-has/index.html
@@ -379,8 +379,7 @@
 </ul>
 </div>
 
-<pre class="js">
-var myItem = simpleCart.add({ name: &quot;Poster&quot; , price: 4 });
+<pre class="js">var myItem = simpleCart.add({ name: &quot;Poster&quot; , price: 4 });
 
 simpleCart.has( myItem ); // true
 
@@ -422,7 +421,7 @@ simpleCart.has( myItem ); // false
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
