--- a/documentation/simplecart-item-quantity/index.html
+++ b/documentation/simplecart-item-quantity/index.html
@@ -383,8 +383,7 @@
 
 <p>&#xA0;</p>
 
-<pre class="js">
-var myItem = simpleCart.add({ name: &quot;Cool Thing&quot; , price: 4, quantity: 1 });
+<pre class="js">var myItem = simpleCart.add({ name: &quot;Cool Thing&quot; , price: 4, quantity: 1 });
 
 myItem.quantity( 10 );
 
@@ -420,7 +419,7 @@ myItem.quantity(); // 10
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
