--- a/documentation/simplecart-item-remove/index.html
+++ b/documentation/simplecart-item-remove/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">.Item.remove</h2>
 					<p>Remove item from the cart:</p>
 
-<pre class="js">
-var myItem = simpleCart.add({ name: &quot;Cool Thing&quot; , price: 4, quantity: 1 });
+<pre class="js">var myItem = simpleCart.add({ name: &quot;Cool Thing&quot; , price: 4, quantity: 1 });
 
 simpleCart.quantity(); // 1
 
@@ -408,7 +407,7 @@ simpleCart.quantity(); // 0
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
