--- a/documentation/simplecart-quantity/index.html
+++ b/documentation/simplecart-quantity/index.html
@@ -374,8 +374,7 @@
 </ul>
 </div>
 
-<pre class="js">
-simpleCart.add({
+<pre class="js">simpleCart.add({
   name: &quot;Coffee Mug&quot;,
   price: 4,
   quantity: 1
@@ -422,7 +421,7 @@ simpleCart.quantity(); // 3
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
