--- a/documentation/simplecart-ready/index.html
+++ b/documentation/simplecart-ready/index.html
@@ -376,8 +376,7 @@
 
 <p>Log the total of the cart when simpleCart has initialized</p>
 
-<pre class="js">
-simpleCart.ready(function(){
+<pre class="js">simpleCart.ready(function(){
   console.log( &quot;Cart total: &quot; + simpleCart.total() );
 });
 
@@ -411,7 +410,7 @@ simpleCart.ready(function(){
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
