--- a/documentation/simplecart-shipping/index.html
+++ b/documentation/simplecart-shipping/index.html
@@ -381,8 +381,7 @@
 
 <p>View the full <a href="/documentation/shipping">shipping documentation</a> for more information.</p>
 
-<pre class="js">
-simpleCart.shipping(function(){
+<pre class="js">simpleCart.shipping(function(){
   return 10;
 });
 
@@ -418,7 +417,7 @@ simpleCart.shipping(); // 10
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
