--- a/documentation/simplecart-tax/index.html
+++ b/documentation/simplecart-tax/index.html
@@ -374,8 +374,7 @@
 </ul>
 </div>
 
-<pre class="js">
-simpleCart({
+<pre class="js">simpleCart({
   taxRate: 0.06
 });
 
@@ -441,7 +440,7 @@ John</p><p></p>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
