--- a/documentation/simplecart-update/index.html
+++ b/documentation/simplecart-update/index.html
@@ -369,8 +369,7 @@
 					<h2 class="pageTitle">simpleCart.update()</h2>
 					<p>Update the cart, including all views in the cart and stored data</p>
 
-<pre class="js">
-  simpleCart.update();
+<pre class="js">  simpleCart.update();
 
 </pre>
 			
@@ -428,7 +427,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/assets/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
-<script src="https://raw.github.com/wojodesign/simplecart-js/v3/simpleCart.js"></script>
+<script src="/assets/js/simpleCart.js"></script>
 <script src="/assets/js/libs/jquery.snippet.js"></script>
 <script defer src="/assets/js/plugins.js"></script>
 <script defer src="/assets/js/main.js"></script>
