simpleCart.js script inclusion

--- a/documentation/simplecart-item-set/index.html
+++ b/documentation/simplecart-item-set/index.html
@@ -375,8 +375,7 @@
 </ul>
 </div>
 
-<pre class="js">
-var myItem = simpleCart.add({ name: &quot;Awesome T-Shirt&quot; , price: 10 , size: &quot;Small&quot; });
+<pre class="js">var myItem = simpleCart.add({ name: &quot;Awesome T-Shirt&quot; , price: 10 , size: &quot;Small&quot; });
 
 myItem.get( &quot;size&quot; ); // Small
 
