--- a/demo/index.html
+++ b/demo/index.html
@@ -178,7 +178,7 @@ simpleCart(js) Demo Code.
 	});
 	
 </script>
-<!-- Change UA-XXXXX-X to be your site's ID -->
+<!-- Change UA-59463797-1 to be your site's ID -->
 <script>
 	var _gaq = [['_setAccount', 'UA-5082207-15'], ['_setDomainName', 'simplecartjs.org'], ['_trackPageview'], ['_trackPageLoadTime']];
 	(function(d, t) {
