--- a/documentation/google_checkout/index.html
+++ b/documentation/google_checkout/index.html
@@ -453,9 +453,9 @@ simpleCart(js) Demo Code.
 	
 </script>
 
-<!-- Change UA-XXXXX-X to be your site's ID -->
+<!-- Change UA-59463797-1 to be your site's ID -->
 <script>
-	var _gaq = [['_setAccount', 'UA-XXXXX-X'], ['_trackPageview'], ['_trackPageLoadTime']];
+	var _gaq = [['_setAccount', 'UA-59463797-1'], ['_trackPageview'], ['_trackPageLoadTime']];
 	(function(d, t) {
 		var g = d.createElement(t),
 		s = d.getElementsByTagName(t)[0];
