added goog analytics

--- a/documentation/[value-of-thumb-attr]/index.html
+++ b/documentation/[value-of-thumb-attr]/index.html
@@ -5,7 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Javascript Shopping Cart - simpleCart(js) </title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59463797-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 	
+		gtag('config', 'UA-59463797-1');
+	</script>
+
 	<!--SEO & Social Content-->
 	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
 	<meta property="og:title" content>
