--- a/documentation/beforeremove-event/index.html
+++ b/documentation/beforeremove-event/index.html
@@ -5,6 +5,15 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Javascript Shopping Cart - simpleCart(js) </title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-59463797-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+	
+		gtag('config', 'UA-59463797-1');
+		</script>
 	
 	<!--SEO & Social Content-->
 	<link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
